--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="six">10 CZK</div>
         <div class="seven">1000 CZK</div>
     </div>
-    <div id="attempts">Attempts left: <span id="attempt-count">5</span></div>
+    <span id="attempts">Attempts left: <span id="attempt-count">5</span></span>
     <script src="script.js" defer></script>
 </body>
 </html>
